--- a/worldedit-core/src/main/resources/lang/strings.json
+++ b/worldedit-core/src/main/resources/lang/strings.json
@@ -133,9 +133,10 @@
     "fawe.error.too-simple": "Complexity must be in the range 0-100",
     "fawe.error.input-parser-exception": "Invalid empty string instead of boolean.",
     "fawe.error.invalid-boolean": "Invalid boolean {0}",
+    "fawe.error.schematic.not.found": "Schematic {0} not found.",
 
     "fawe.cancel.worldedit.cancel.count": "Cancelled {0} edits.",
-	"fawe.cancel.worldedit.cancel.reason.confirm": "Use //confirm to execute {2}",
+	"fawe.cancel.worldedit.cancel.reason.confirm": "Use //confirm to execute {0}",
 	"fawe.cancel.worldedit.cancel.reason.confirm.region": "Your selection is large ({0} -> {1}, containing {3} blocks). Use //confirm to execute {2}",
 	"fawe.cancel.worldedit.cancel.reason.confirm.radius": "Your radius is large ({0} > {1}). Use //confirm to execute {2}",
 	"fawe.cancel.worldedit.cancel.reason.confirm.limit": "You're exceeding your limit for this action ({0} > {1}). Use //confirm to execute {2}",
@@ -372,13 +373,14 @@
     "worldedit.schematic.directory-does-not-exist": "Directory '{0}' does not exist!",
     "worldedit.schematic.file-perm-fail": "Creation of '{0}' failed! Check file permission.",
     "worldedit.schematic.sorting-old-new": "Cannot sort by oldest and newest.",
+    "worldedit.schematic.unsupported-minecraft-version": "This version of WorldEdit does not support your Minecraft version. Schematics will not work until this is resolved.",
 
     "worldedit.pos.already-set": "Position already set.",
     "worldedit.pos.console-require-coords": "You must provide coordinates as console.",
     "worldedit.hpos.no-block": "No block in sight!",
     "worldedit.hpos.already-set": "Position already set.",
     "worldedit.chunk.selected-multiple": "Chunks selected: ({0}, {1}) - ({2}, {3})",
-    "worldedit.chunk.selected": "Chunk selected: {0}, {1}, {2}",
+    "worldedit.chunk.selected": "Chunk selected: {0}, {1}",
     "worldedit.wand.invalid": "Wand item is mis-configured or disabled.",
     "worldedit.wand.selwand.info": "Left click: select pos #1; Right click: select pos #2",
     "worldedit.wand.selwand.now.tool": "The selection wand is now a normal tool. You can disable it with {0} and rebind it to any item with {1} or get a new wand with {2}.",
@@ -576,6 +578,8 @@
     "worldedit.operation.affected.column": "{0} columns affected",
     "worldedit.operation.affected.entity": "{0} entities affected",
     "worldedit.operation.deform.expression": "deformed using {0}",
+
+    "worldedit.error.parser.invalid-nbt": "Invalid NBT Data in input: '{0}'. Error: {1}",
 
     "worldedit.selection.convex.info.vertices": "Vertices: {0}",
     "worldedit.selection.convex.info.triangles": "Triangles: {0}",
