--- a/worldedit-core/src/main/resources/lang/strings.json
+++ b/worldedit-core/src/main/resources/lang/strings.json
@@ -60,6 +60,7 @@
 	"fawe.worldedit.brush.spline.secondary": "Created spline",
 	"fawe.worldedit.brush.brush.source.mask.disabled": "Brush source mask disabled",
 	"fawe.worldedit.brush.brush.source.mask": "Brush source mask set",
+	"fawe.worldedit.brush.brush.transform.disabled": "Brush transform disabled",
 	"fawe.worldedit.brush.brush.transform": "Brush transform set",
 
 	"fawe.worldedit.rollback.rollback.element": "Undoing {0}",
@@ -89,8 +90,6 @@
 	"fawe.worldedit.selector.selector.fuzzy.pos1": "Region set and expanded from {0} {1}.",
 	"fawe.worldedit.selector.selector.fuzzy.pos2": "Added expansion of {0} {1}.",
 
-	"fawe.worldedit.help.command.clarifying.bracket": "Added clarifying bracket for {0}",
-
 	"fawe.progress.progress.message": "{1}/{0} ({2}%) @{3}cps {4}s left",
 	"fawe.progress.progress.finished": "[ Done! ]",
 
@@ -110,7 +109,7 @@
     "fawe.error.parser.invalid-data": "Invalid data: {0}",
     "fawe.error.unsupported": "Unsupported!",
     "fawe.error.invalid-block-type": "Does not match a valid block type: {0}",
-    "fawe.error.nbt.forbidden": "You are not allowed to use nbt.",
+    "fawe.error.nbt.forbidden": "You are not allowed to use nbt. Lacking permission: {0}",
     "fawe.error.invalid-arguments": "Invalid amount of arguments. Expected: {0}",
     "fawe.error.unrecognised-tag": "Unrecognised tag: {0} {1}",
     "fawe.error.unknown-block-tag": "Unknown block tag: {0}",
@@ -132,9 +131,19 @@
     "fawe.error.no-failure": "This shouldn't result in any failure",
     "fawe.error.invalid-bracketing": "Invalid bracketing, are you missing a '{0}'.",
     "fawe.error.too-simple": "Complexity must be in the range 0-100",
+    "fawe.error.outside-range": "Argument {0} outside of range {1}-{2}.",
+    "fawe.error.outside-range-lower": "Argument {0} may not be less than {1}",
+    "fawe.error.outside-range-upper": "Argument {0} may not be greater than {1}",
+    "fawe.error.argument-size-mismatch": "Argument {0} may not be greater than argument {1}",
     "fawe.error.input-parser-exception": "Invalid empty string instead of boolean.",
     "fawe.error.invalid-boolean": "Invalid boolean {0}",
     "fawe.error.schematic.not.found": "Schematic {0} not found.",
+    "fawe.error.parse.invalid-dangling-character": "Invalid dangling character {0}.",
+    "fawe.error.parse.unknown-mask": "Unknown mask: {0}, See: {1}",
+    "fawe.error.parse.unknown-pattern": "Unknown pattern: {0}, See: {1}",
+    "fawe.error.parse.unknown-transform": "Unknown transform: {0}, See: {1}",
+    "fawe.error.parse.no-clipboard": "To use {0}, please first copy something to your clipboard",
+    "fawe.error.parse.no-clipboard-source": "No clipboards found at given source: {0}",
 
     "fawe.cancel.worldedit.cancel.count": "Cancelled {0} edits.",
 	"fawe.cancel.worldedit.cancel.reason.confirm": "Use //confirm to execute {0}",
@@ -152,6 +161,8 @@
 	"fawe.cancel.worldedit.cancel.reason.outside.level": "Outside world",
 	"fawe.cancel.worldedit.cancel.reason.outside.region": "Outside allowed region (bypass with /wea, or disable `region-restrictions` in config.yml)",
 	"fawe.cancel.worldedit.cancel.reason.no.region": "No allowed region (bypass with /wea, or disable `region-restrictions` in config.yml)",
+	"fawe.cancel.worldedit.cancel.reason.player-only": "This operation requires a player, and cannot be executed from console, or without an actor.",
+	"fawe.cancel.worldedit.cancel.reason.actor-required": "This operation requires an actor.",
 	"fawe.cancel.worldedit.failed.load.chunk": "Skipped loading chunk: {0};{1}. Try increasing chunk-wait.",
 
 	"fawe.navigation.no.block": "No block in sight! (or too far)",
@@ -246,6 +257,7 @@
     "worldedit.error.max-changes": "Max blocks changed in an operation reached ({0}).",
     "worldedit.error.max-brush-radius": "Maximum brush radius (in config-legacy.yml): {0}",
     "worldedit.error.max-radius": "Maximum radius (in config-legacy.yml): {0}",
+    "worldedit.error.unknown-direction": "Unknown direction: {0}",
     "worldedit.error.empty-clipboard": "Your clipboard is empty. Use //copy first.",
     "worldedit.error.invalid-filename": "Filename '{0}' invalid: {1}",
     "worldedit.error.file-resolution": "File '{0}' resolution error: {1}",
@@ -253,6 +265,9 @@
     "worldedit.error.file-aborted": "File selection aborted.",
     "worldedit.error.world-unloaded": "The world was unloaded already.",
     "worldedit.error.blocks-cant-be-used": "Blocks can't be used",
+    "worldedit.error.unknown-tag": "Tag name '{0}' was not recognized.",
+    "worldedit.error.empty-tag": "Tag name '{0}' has no contents.",
+    "worldedit.error.unknown-biome": "Biome name '{0}' was not recognized.",
 
     "worldedit.brush.radius-too-large": "Maximum allowed brush radius: {0}",
     "worldedit.brush.apply.description": "Apply brush, apply a function to every block",
@@ -270,6 +285,11 @@
     "worldedit.brush.cylinder.equip": "Cylinder brush shape equipped ({0} by {1}).",
     "worldedit.brush.clipboard.equip": "Clipboard brush shape equipped.",
     "worldedit.brush.smooth.equip": "Smooth brush equipped ({0} x {1}x using {2}).",
+    "worldedit.brush.smooth.nofilter": "any block",
+    "worldedit.brush.smooth.filter": "filter",
+    "worldedit.brush.snowsmooth.equip": "SnowSmooth brush equipped ({0} x {1}x using {2}), {3} snow blocks.",
+    "worldedit.brush.snowsmooth.nofilter": "any block",
+    "worldedit.brush.snowsmooth.filter": "filter",
     "worldedit.brush.extinguish.equip": "Extinguisher equipped ({0}).",
     "worldedit.brush.gravity.equip": "Gravity brush equipped ({0}).",
     "worldedit.brush.butcher.equip": "Butcher brush equipped ({0}).",
@@ -469,6 +489,7 @@
     "worldedit.naturalize.naturalized": "{0} block(s) have been made to look more natural.",
     "worldedit.center.changed": "Center set. ({0} blocks changed)",
     "worldedit.smooth.changed": "Terrain's height map smoothed. {0} blocks changed.",
+    "worldedit.snowsmooth.changed": "Snow's height map smoothed. {0} blocks changed.",
     "worldedit.move.moved": "{0} blocks moved.",
     "worldedit.deform.deformed": "{0} blocks have been deformed.",
     "worldedit.hollow.changed": "{0} blocks have been changed.",
@@ -491,6 +512,7 @@
 
     "worldedit.cyl.invalid-radius": "You must either specify 1 or 2 radius values.",
     "worldedit.cyl.created": "{0} blocks have been created.",
+    "worldedit.hcyl.thickness-too-large": "Thickness cannot be larger than x or z radii.",
     "worldedit.sphere.invalid-radius": "You must either specify 1 or 3 radius values.",
     "worldedit.sphere.created": "{0} blocks have been created.",
     "worldedit.forestgen.created": "{0} trees created.",
@@ -508,6 +530,13 @@
     "worldedit.timezone.current": "The current time in that timezone is: {0}",
     "worldedit.version.version": "FAWE version:\n - Date {0}\n - Commit {1}\n - Build {2}\n - Platform {3}",
     "worldedit.version.bukkit.unsupported-adapter": "This FAWE version does not fully support your version of Bukkit. Block entities (e.g. chests) will be empty, block properties (e.g. rotation) will be missing, and other things may not work.\nUpdate FAWE and your server software to restore this functionality:\n{0}",
+
+    "worldedit.trace.no-tracing-extents":  "Trace: No extent was used.",
+    "worldedit.trace.action-failed":  "Trace: Action(s) {0} at {1} discarded by extent {2}",
+    "worldedit.trace.active.already": "Trace mode already active.",
+    "worldedit.trace.inactive.already": "Trace mode already inactive.",
+    "worldedit.trace.active": "Trace mode now active.",
+    "worldedit.trace.inactive": "Trace mode now inactive.",
 
     "worldedit.command.time-elapsed": "{0}s elapsed (history: {1} changed; {2} blocks/sec).",
     "worldedit.command.permissions": "You are not permitted to do that. Are you in the right mode?",
