--- a/worldedit-core/src/main/resources/lang/strings.json
+++ b/worldedit-core/src/main/resources/lang/strings.json
@@ -13,7 +13,7 @@
   "fawe.info.worldedit.restricted": "Your FAWE edits are now restricted.",
   "fawe.info.worldedit.oom.admin": "Possible options:\n - //fast\n - Do smaller edits\n - Allocate more memory\n - Disable `max-memory-percent`",
   "fawe.info.temporarily-not-working": "Temporarily not working",
-  "fawe.info.update-available": "An update for FastAsyncWorldEdit is available. You are {0} build(s) out of date.\nYou are running version {1}, the latest version is {2}.\nUpdate at {3}",
+  "fawe.info.update-available": "An update for FastAsyncWorldEdit is available. You are {0} build(s) out of date.\nYou are running build {1}, the latest version is build {2}.\nUpdate at {3}",
   "fawe.web.generating.link": "Uploading {0}, please wait...",
   "fawe.web.generating.link.failed": "Failed to generate download link!",
   "fawe.web.download.link": "{0}",
@@ -129,6 +129,7 @@
   "fawe.error.clipboard.on.disk.version.mismatch": "Clipboard version mismatch. Please delete your clipboards folder and restart the server.",
   "fawe.error.limit.disallowed-block": "Your limit disallows use of block '{0}'",
   "fawe.error.limit.disallowed-property": "Your limit disallows use of property '{0}'",
+  "fawe.error.region-mask-invalid": "Invalid region mask: {0}",
   "fawe.cancel.count": "Cancelled {0} edits.",
   "fawe.cancel.reason.confirm": "Use //confirm to execute {0}",
   "fawe.cancel.reason.confirm.region": "Your selection is large ({0} -> {1}, containing {3} blocks). Use //confirm to execute {2}",
@@ -237,8 +238,8 @@
   "worldedit.error.unknown-block": "Block name '{0}' was not recognized.",
   "worldedit.error.disallowed-block": "Block '{0}' not allowed (see WorldEdit configuration).",
   "worldedit.error.max-changes": "Max blocks changed in an operation reached ({0}).",
-  "worldedit.error.max-brush-radius": "Maximum brush radius (in config-legacy.yml): {0}",
-  "worldedit.error.max-radius": "Maximum radius (in config-legacy.yml): {0}",
+  "worldedit.error.max-brush-radius": "Maximum brush radius (in worldedit-config.yml): {0}",
+  "worldedit.error.max-radius": "Maximum radius (in worldedit-config.yml): {0}",
   "worldedit.error.unknown-direction": "Unknown direction: {0}",
   "worldedit.error.empty-clipboard": "Your clipboard is empty. Use //copy first.",
   "worldedit.error.invalid-filename": "Filename '{0}' invalid: {1}",
@@ -495,7 +496,6 @@
   "worldedit.timezone.set": "Timezone set for this session to: {0}",
   "worldedit.timezone.current": "The current time in that timezone is: {0}",
   "worldedit.version.version": "FAWE version:\n - Date {0}\n - Commit {1}\n - Build {2}\n - Platform {3}",
-  "worldedit.version.bukkit.unsupported-adapter": "This FAWE version does not fully support your version of Bukkit. Block entities (e.g. chests) will be empty, block properties (e.g. rotation) will be missing, and other things may not work.\nUpdate FAWE and your server software to restore this functionality:\n{0}",
   "worldedit.trace.no-tracing-extents": "Trace: No extent was used.",
   "worldedit.trace.action-failed": "Trace: Action(s) {0} at {1} discarded by extent {2}",
   "worldedit.trace.active.already": "Trace mode already active.",
@@ -618,5 +618,7 @@
   "worldedit.help.no-subcommands": "'{0}' has no sub-commands. (Maybe '{1}' is for a parameter?)",
   "worldedit.help.subcommand-not-found": "The sub-command '{0}' under '{1}' could not be found.",
   "worldedit.cli.stopping": "Stopping!",
-  "worldedit.cli.unknown-command": "Unknown command!"
+  "worldedit.cli.unknown-command": "Unknown command!",
+  "worldedit.version.bukkit.unsupported-adapter": "This FastAsyncWorldEdit version does not fully support your version of Bukkit. Block entities (e.g. chests) will be empty, block properties (e.g. rotation) will be missing, and other things may not work. Update FastAsyncWorldEdit to restore this functionality:\n{0}",
+  "worldedit.bukkit.no-edit-without-adapter": "Editing on unsupported versions is disabled."
 }
