--- a/worldedit-core/src/main/resources/lang/strings.json
+++ b/worldedit-core/src/main/resources/lang/strings.json
@@ -14,7 +14,8 @@
   "fawe.info.worldedit.oom.admin": "Possible options:\n - //fast\n - Do smaller edits\n - Allocate more memory\n - Disable `max-memory-percent`",
   "fawe.info.temporarily-not-working": "Temporarily not working",
   "fawe.info.light-blocks": "Light blocks are more reliable than light sources, please use the blocks. This command is deprecated and will be removed in a future version.",
-  "fawe.info.update-available": "An update for FastAsyncWorldEdit is available. You are {0} build(s) out of date.\nYou are running build {1}, the latest version is build {2}.\nUpdate at {3}",
+  "fawe.info.update-available.build": "An update for FastAsyncWorldEdit is available. You are {0} build(s) behind.\nYou are running build {1}, the latest build is {2}.\nUpdate at {3}",
+  "fawe.info.update-available.release": "A new release for FastAsyncWorldEdit is available: {0}. You are currently on {1}. Download from {2}, {3} or {4}.",
   "fawe.web.generating.link": "Uploading {0}, please wait...",
   "fawe.web.generating.link.failed": "Failed to generate download link!",
   "fawe.web.download.link": "{0}",
@@ -294,9 +295,12 @@
   "worldedit.brush.gravity.equip": "Gravity brush equipped ({0}).",
   "worldedit.brush.butcher.equip": "Butcher brush equipped ({0}).",
   "worldedit.brush.operation.equip": "Set brush to {0}.",
+  "worldedit.brush.morph.equip": "Morph brush shape equipped: {0}.",
+  "worldedit.brush.biome.column-supported-types": "This brush shape is not supported with whole-column brushing, try the cylinder shape.",
   "worldedit.brush.none.equip": "Brush unbound from your current item.",
   "worldedit.brush.none.equipped": "You have no brush bound to your current item. Try /brush sphere for a basic brush.",
   "worldedit.setbiome.changed": "Biomes were changed in {0} columns. You may have to rejoin your game (or close and reopen your world) to see a change.",
+  "worldedit.setbiome.warning": "You may have to re-join your game (or close and re-open your world) to see changes.",
   "worldedit.setbiome.not-locatable": "Command sender must be present in the world to use the -p flag.",
   "worldedit.drawsel.disabled": "Server CUI disabled.",
   "worldedit.drawsel.enabled": "Server CUI enabled. This only supports cuboid regions, with a maximum size of {0}x{1}x{2}.",
@@ -412,6 +416,8 @@
   "worldedit.shift.shifted": "Region shifted.",
   "worldedit.outset.outset": "Region outset.",
   "worldedit.inset.inset": "Region inset.",
+  "worldedit.trim.trim": "Region trimmed.",
+  "worldedit.trim.no-blocks": "No blocks matched the trim mask.",
   "worldedit.size.offset": "{0}: {1} @ {2} ({3} blocks)",
   "worldedit.size.type": "Type: {0}",
   "worldedit.size.size": "Size: {0}",
@@ -627,10 +633,14 @@
   "worldedit.selection.polygon2d.explain.secondary": "Added point #{0} at {1}.",
   "worldedit.selection.sphere.explain.secondary": "Radius set to {0}.",
   "worldedit.selection.sphere.explain.secondary-defined": "Radius set to {0} ({1}).",
+  "worldedit.sideeffect.history": "History",
+  "worldedit.sideeffect.history.description": "Writes history of the change",
+  "worldedit.sideeffect.heightmaps": "Heightmaps",
+  "worldedit.sideeffect.heightmaps.description": "Updates heightmaps",
   "worldedit.sideeffect.lighting": "Lighting",
   "worldedit.sideeffect.lighting.description": "Updates block lighting",
   "worldedit.sideeffect.neighbors": "Neighbors",
-  "worldedit.sideeffect.neighbors.description": "Notifies nearby blocks of changes",
+  "worldedit.sideeffect.neighbors.description": "Updates shapes of blocks in the edit",
   "worldedit.sideeffect.update": "Update",
   "worldedit.sideeffect.update.description": "Notifies the changed block",
   "worldedit.sideeffect.validation": "Validation",
